fix(DuoChat): Handle large text in chat input
This correctly applies a max-height to the parent element of the text
input. UX wise this fix might be less than ideal because on systems
which show a scrollbar, the "Submit" button might float above the
scrollbar. But at least this is usuable again.

--- a/src/components/experimental/duo/chat/duo_chat.scss
+++ b/src/components/experimental/duo/chat/duo_chat.scss
@@ -36,6 +36,8 @@
 .duo-chat-input {
   @include gl-display-flex;
   @include gl-flex-direction-column;
+  max-height: 240px;
+  overflow: hidden;
 
   &:focus-within {
     @include gl-focus($color: $gray-900);
@@ -45,7 +47,7 @@
     flex: 1;
     resize: none;
     max-height: 240px;
-    width: calc(100% - 40px);
+    padding-right: 40px;
   }
 
   &::after {
